pbcopy
/Users/junic/Practices/C++/cpp-stg/main.cpp:16:47: warning: data argument not used by format string [-Wformat-extra-args]
   16 |         SDL_Log("SDL_CreateWindow() Error: ", SDL_GetError());
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ^
/Users/junic/Practices/C++/cpp-stg/main.cpp:22:49: warning: data argument not used by format string [-Wformat-extra-args]
   22 |         SDL_Log("SDL_CreateRenderer() Error: ", SDL_GetError());
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ^
/Users/junic/Practices/C++/cpp-stg/main.cpp:37:5: error: unknown type name 'SDL_bool_renamed_bool'
   37 |     SDL_bool running = SDL_TRUE;
      |     ^
/opt/homebrew/include/SDL3/SDL_oldnames.h:1242:18: note: expanded from macro 'SDL_bool'
 1242 | #define SDL_bool SDL_bool_renamed_bool
      |                  ^
/Users/junic/Practices/C++/cpp-stg/main.cpp:37:24: error: use of undeclared identifier 'SDL_TRUE_renamed_true'
   37 |     SDL_bool running = SDL_TRUE;
      |                        ^
/opt/homebrew/include/SDL3/SDL_oldnames.h:1241:18: note: expanded from macro 'SDL_TRUE'
 1241 | #define SDL_TRUE SDL_TRUE_renamed_true
      |                  ^
/Users/junic/Practices/C++/cpp-stg/main.cpp:49:31: error: use of undeclared identifier 'SDL_FALSE_renamed_false'
   49 |                     running = SDL_FALSE;
      |                               ^
/opt/homebrew/include/SDL3/SDL_oldnames.h:1239:19: note: expanded from macro 'SDL_FALSE'
 1239 | #define SDL_FALSE SDL_FALSE_renamed_false
      |                   ^
/Users/junic/Practices/C++/cpp-stg/main.cpp:53:35: error: use of undeclared identifier 'SDL_FALSE_renamed_false'
   53 |                         running = SDL_FALSE;
      |                                   ^
/opt/homebrew/include/SDL3/SDL_oldnames.h:1239:19: note: expanded from macro 'SDL_FALSE'
 1239 | #define SDL_FALSE SDL_FALSE_renamed_false
      |                   ^
2 warnings and 4 errors generated.
make[2]: *** [CMakeFiles/cppstg.dir/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/cppstg.dir/all] Error 2
make: *** [all] Error 2
